# Kuka_sim

./: Dockerfile  Dockerfile copy  Dockerfile_bla  README.md  docker-compose.yaml  entrypoint.sh  start.sh
src/gazebo_ycb/: CMakeLists.txt  package.xml
src/iiwa_robotique_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/iiwa_robotique_moveit/config/: iiwa_with_robotiq.ros2_control.xacro  iiwa_with_robotiq.srdf  iiwa_with_robotiq.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_sensors.yaml  my_robot.urdf  ompl_planning.yaml  robot_for_sim.urdf  ros2_controllers.yaml
src/iiwa_robotique_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/iiwa_robotique_moveit/worlds/: empty.world
src/iiwa_with_robotique/: CMakeLists.txt  package.xml
src/iiwa_with_robotique/urdf/: iiwa_with_robotiq.urdf.xacro
src/intel_435/: CMakeLists.txt  package.xml
src/intel_435/launch/: camera.launch.py
src/intel_435/urdf/: camera1.sdf  camera2.sdf  camera3.sdf  intel_d435.sdf  world.xml
src/obj_models_small_size_final/: CMakeLists.txt  package.xml
src/obj_models_small_size_final/bg/: test_scene1.ply  test_scene2.ply  test_scene3.ply  test_scene4.ply  test_scene5.ply
src/obj_models_small_size_final/bottle/: bottle-85_alcool.mtl  bottle-85_alcool.urdf  bottle-85_alcool_norm.txt  bottle-alcool_hands.mtl  bottle-alcool_hands.urdf  bottle-alcool_hands_norm.txt  bottle-avene_skincare.mtl  bottle-avene_skincare.urdf  bottle-avene_skincare_norm.txt  bottle-baby_cleansing_water.mtl  bottle-baby_cleansing_water.urdf  bottle-baby_cleansing_water_norm.txt  bottle-cleansing_lotion_small.mtl  bottle-cleansing_lotion_small.urdf  bottle-cleansing_lotion_small_norm.txt  bottle-deodorant_spray.mtl  bottle-deodorant_spray.urdf  bottle-deodorant_spray_norm.txt  bottle-dettol_washing_machine.mtl  bottle-dettol_washing_machine.urdf  bottle-dettol_washing_machine_norm.txt  bottle-eres_inox.mtl  bottle-eres_inox.urdf  bottle-eres_inox_norm.txt  bottle-eres_soap.mtl  bottle-eres_soap.urdf  bottle-eres_soap_norm.txt  bottle-evian_frozen.mtl  bottle-evian_frozen.urdf  bottle-evian_frozen_norm.txt  bottle-evian_red.mtl  bottle-evian_red.urdf  bottle-evian_red_norm.txt  bottle-hg_meubeline.mtl  bottle-hg_meubeline.urdf  bottle-hg_meubeline_norm.txt  bottle-inox_cleaner.mtl  bottle-inox_cleaner.urdf  bottle-inox_cleaner_norm.txt  bottle-mouthwash_meridol.mtl  (+23 more)
src/obj_models_small_size_final/box/: box-antikalk.mtl  box-antikalk.urdf  box-antikalk_norm.txt  box-barilla.mtl  box-barilla.urdf  box-barilla_norm.txt  box-bbq.mtl  box-bbq.urdf  box-bbq_norm.txt  box-bisolvon_sirup.mtl  box-bisolvon_sirup.urdf  box-bisolvon_sirup_norm.txt  box-colgate.mtl  box-colgate.urdf  box-colgate_norm.txt  box-corny.mtl  box-corny.urdf  box-corny_norm.txt  box-crunchy_muesli.mtl  box-crunchy_muesli.urdf  box-crunchy_muesli_norm.txt  box-ebly.mtl  box-ebly.urdf  box-ebly_norm.txt  box-egar_omega_3.mtl  box-egar_omega_3.urdf  box-egar_omega_3_norm.txt  box-garmin.mtl  box-garmin.urdf  box-garmin_norm.txt  box-gift.mtl  box-gift.urdf  box-gift_norm.txt  box-iglo.mtl  box-iglo.urdf  box-iglo_norm.txt  box-kleenex.mtl  box-kleenex.urdf  box-kleenex_norm.txt  box-koala.mtl  (+29 more)
src/obj_models_small_size_final/can/: can-beer_delta.mtl  can-beer_delta.urdf  can-beer_delta_norm.txt  can-cheakpeas.mtl  can-cheakpeas.urdf  can-cheakpeas_norm.txt  can-coke_small.mtl  can-coke_small.urdf  can-coke_small_norm.txt  can-concentrated_tall.mtl  can-concentrated_tall.urdf  can-concentrated_tall_norm.txt  can-concentrated_tiny.mtl  can-concentrated_tiny.urdf  can-concentrated_tiny_norm.txt  can-corn.mtl  can-corn.urdf  can-corn_norm.txt  can-corn_small.mtl  can-corn_small.urdf  can-corn_small_norm.txt  can-corned_beef.mtl  can-corned_beef.urdf  can-corned_beef_norm.txt  can-fanta.mtl  can-fanta.urdf  can-fanta_norm.txt  can-fricadelles.mtl  can-fricadelles.urdf  can-fricadelles_norm.txt  can-hoegaarden.mtl  can-hoegaarden.urdf  can-hoegaarden_norm.txt  can-kidney_beans.mtl  can-kidney_beans.urdf  can-kidney_beans_norm.txt  can-large_tuna.mtl  can-large_tuna.urdf  can-large_tuna_norm.txt  can-meatball.mtl  (+29 more)
src/obj_models_small_size_final/cup/: cup-green_actys.mtl  cup-green_actys.urdf  cup-green_actys_norm.txt  cup-green_handle.mtl  cup-green_handle.urdf  cup-green_handle_norm.txt  cup-grey_handle.mtl  cup-grey_handle.urdf  cup-grey_handle_norm.txt  cup-mc_cafe.mtl  cup-mc_cafe.urdf  cup-mc_cafe_norm.txt  cup-new_york.mtl  cup-new_york.urdf  cup-new_york_big.mtl  cup-new_york_big.urdf  cup-new_york_big_norm.txt  cup-new_york_norm.txt  cup-plastic_green_flowers.mtl  cup-plastic_green_flowers.urdf  cup-plastic_green_flowers_norm.txt  cup-red.mtl  cup-red.urdf  cup-red_heart.mtl  cup-red_heart.urdf  cup-red_heart_norm.txt  cup-red_norm.txt  cup-stanford.mtl  cup-stanford.urdf  cup-stanford_norm.txt  cup-teal_pattern_ikea.mtl  cup-teal_pattern_ikea.urdf  cup-teal_pattern_ikea_norm.txt  cup-white_coffee_round_handle.mtl  cup-white_coffee_round_handle.urdf  cup-white_coffee_round_handle_norm.txt  cup-white_hogermann.mtl  cup-white_hogermann.urdf  cup-white_hogermann_norm.txt  cup-white_whisker.mtl  (+8 more)
src/obj_models_small_size_final/cutlery/: cutlery-fork_1.urdf  cutlery-fork_1_new.urdf  cutlery-fork_1_new_norm.txt  cutlery-fork_1_norm.txt  cutlery-fork_2_new.urdf  cutlery-fork_2_new_norm.txt  cutlery-fork_3_new.urdf  cutlery-fork_3_new_norm.txt  cutlery-knife_1.urdf  cutlery-knife_1_new.urdf  cutlery-knife_1_new_norm.txt  cutlery-knife_1_norm.txt  cutlery-knife_2.urdf  cutlery-knife_2_new.urdf  cutlery-knife_2_new_norm.txt  cutlery-knife_2_norm.txt  cutlery-knife_3_new.urdf  cutlery-knife_3_new_norm.txt  cutlery-spoon_1.urdf  cutlery-spoon_1_new.urdf  cutlery-spoon_1_new_norm.txt  cutlery-spoon_1_norm.txt  cutlery-spoon_2.urdf  cutlery-spoon_2_new.urdf  cutlery-spoon_2_new_norm.txt  cutlery-spoon_2_norm.txt  cutlery-spoon_3_new.urdf  (+8 more)
(+478 files in other folders)
