<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>admittance_controller</name>
  <version>0.0.1</version>
  <description>An admittance controller for ros2_control.</description>
  <maintainer email="m.bednarczyk@unistra.fr">m.bednarczyk</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>trajectory_msgs</depend>

  <depend>external_torque_sensor_broadcaster</depend>

  <export>
    <build_type>ament_cmake</build_type>

    <controller_interface plugin="${prefix}/admittance_controller_plugin.xml"/>
  </export>
</package>